--- a/.eslintrc
+++ b/.eslintrc
@@ -8,15 +8,13 @@
   "env": {
     "es6": true
   },
-  "plugins": [
-    "react"
-  ],
+  "plugins": ["react"],
   "rules": {
     "react/jsx-uses-react": 2,
     "react/jsx-uses-vars": 2,
     "react/react-in-jsx-scope": 2,
     "react/prefer-stateless-function": "off",
-    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"]}],
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "react/forbid-prop-types": "off",
     "react/require-default-props": "off",
     "jsx-a11y/img-has-alt": "off",
